tests/bad/frontendErrors/unknownTypeDecl.latte
int main () {
	A a = 22;
	return 0;
}
